[FormXWidget] Avoid hover-flicker by always using "default" cursor.

--- a/src/Widgets/FormContainerWidget/FormContainerWidget.scss
+++ b/src/Widgets/FormContainerWidget/FormContainerWidget.scss
@@ -8,12 +8,10 @@
   .text-mandatory {
     font-weight: bold;
     color: $secondary;
+    cursor: default;
   }
   .fa {
     color: #ccc;
-  }
-  .help-cursor:hover {
-    cursor: help;
   }
 }
 
